<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <!-- Imagen del producto -->
        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_pink"/>

        <!-- Datos del producto -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <!-- Botón ver detalle -->
        <ImageButton
            android:id="@+id/btnVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ver_detalle"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
